--- a/EOL/package.json
+++ b/EOL/package.json
@@ -32,6 +32,8 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.0",
+    "@ngrx/signals": "^20.1.0",
+    "eslint": "^9.39.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
