--- a/EOL/package.json
+++ b/EOL/package.json
@@ -33,6 +33,8 @@
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.0",
     "@ngrx/signals": "^20.1.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "eslint": "^9.39.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
