--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "test:watch": "ng test --watch",
+    "test": "vitest run",
+    "test:watch": "vitest run --watch",
     "lint": "ng lint"
   },
   "prettier": {
