--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "vitest run",
-    "test:watch": "vitest run --watch",
-    "lint": "ng lint"
+    "test": "ng test",
+    "serve:ssr:EOL": "node dist/EOL/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -30,11 +29,14 @@
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
+    "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@ngrx/signals": "^20.0.0-rc.0",
+    "@angular/ssr": "^21.0.0",
+    "@ngrx/signals": "^20.1.0",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.4",
     "eslint": "^9.39.1",
+    "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -42,11 +44,12 @@
     "@angular/build": "^21.0.0",
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
