feat: Initialize Angular project with core components, routing, data service, and quiz features, while updating project configurations and removing old config files.

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             ],
             "styles": [
               "src/styles.css"
-            ]
+            ],
+            "outputPath": "dist/EOL"
           },
           "configurations": {
             "production": {
@@ -64,9 +65,6 @@
             }
           },
           "defaultConfiguration": "development"
-        },
-        "test": {
-          "builder": "@angular/build:unit-test"
         }
       }
     }
