--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@angular/core": "^21.0.3",
     "@angular/forms": "^21.0.3",
     "@angular/platform-browser": "^21.0.3",
+    "@angular/platform-browser-dynamic": "^21.0.3",
     "@angular/router": "^21.0.3",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.4",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
     "@analogjs/vitest-angular": "^2.1.2",
@@ -44,9 +46,11 @@
     "@types/node": "^20.17.19",
     "angular-eslint": "21.0.1",
     "eslint": "^9.39.1",
+    "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.2",
-    "typescript-eslint": "8.46.4"
+    "typescript-eslint": "8.46.4",
+    "vitest": "^4.0.15"
   }
 }
