--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
-    "test": "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "prettier": {
     "printWidth": 100,
@@ -24,6 +25,7 @@
   "private": true,
   "packageManager": "npm@11.6.3",
   "dependencies": {
+    "@angular/animations": "^21.0.3",
     "@angular/common": "^21.0.3",
     "@angular/compiler": "^21.0.3",
     "@angular/core": "^21.0.3",
@@ -44,6 +46,7 @@
     "@angular/compiler-cli": "^21.0.3",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.17.19",
+    "@vitest/coverage-v8": "^4.0.15",
     "angular-eslint": "21.0.1",
     "eslint": "^9.39.1",
     "jsdom": "^27.2.0",
